--- a/p8105_hw3_xl2851.md
+++ b/p8105_hw3_xl2851.md
@@ -11,14 +11,14 @@ library(tidyr)
 library(tidyverse)
 ```
 
-    ## -- Attaching packages -------------------
+    ## -- Attaching packages ------------------------------------------ tidyverse 1.2.1 --
 
     ## v ggplot2 3.2.1     v purrr   0.3.2
     ## v tibble  2.1.3     v dplyr   0.8.3
     ## v readr   1.3.1     v stringr 1.4.0
     ## v ggplot2 3.2.1     v forcats 0.4.0
 
-    ## -- Conflicts --- tidyverse_conflicts() --
+    ## -- Conflicts --------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -52,24 +52,23 @@ from.
 ## 1.2 Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered.
 
 ``` r
-  aisle_count %>%
-  filter(number_of_items>10000)%>%
-  ggplot(aes(x=number_of_items, y=aisle))+
-  geom_point(alpha=0.6)
-```
-
-![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
-
-``` r
-   labs(
-    title = "number of items ordered in each aisle",
+instacart %>% 
+  group_by(aisle) %>% 
+  summarize(n_aisle = n()) %>% 
+  arrange(desc(n_aisle)) %>% 
+  mutate(aisle = forcats::fct_reorder(aisle, n_aisle, .desc = FALSE)) %>% 
+  filter(n_aisle>=10000) %>% 
+      ggplot(aes(x = aisle, y = n_aisle)) +
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  labs(title = "number of items ordered in each aisle",
     x = "names of aisles",
     y = "number of items",
     caption = "Data from instacart")+
 theme(axis.text.y = element_text(angle = 0, hjust = 1))
 ```
 
-    ## NULL
+![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
 
 ## 1.3 Make a table showing the three most popular items in each of the aisles
 
@@ -998,24 +997,26 @@ locations.
 brfss_new =
   tidied_brfss %>% 
   filter(response == "Excellent") %>% 
-  group_by(year, location) %>% 
+  group_by(state, year) %>% 
   mutate(mean = mean(data_value, na.rm = FALSE)) %>%
-  select(year, location, mean) %>% 
+  select(year, state, mean) %>% 
   distinct() 
 ```
 
 ## Make a “spaghetti” plot
 
 ``` r
-ggplot(brfss_new, aes(x = year, y = mean, color = location, group = location))+
+brfss_new%>%
+ggplot(aes(x = year, y = mean, color = state)）+
   geom_line() +
-  theme(legend.position="none") +
-  xlab("Year") +
-  ylab("Mean value") +
-  ggtitle("The average value over time within a state")
+   labs(
+    title = "Average data value over time within a state across years(%)",
+    x = "Year",
+    y = "Average data value (%)"
+  ) 
 ```
 
-    ## Warning: Removed 5 rows containing missing values (geom_path).
+    ## Warning: Removed 3 rows containing missing values (geom_path).
 
 ![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
